--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>foo.sample.maven.ci.friendly</groupId>
 	<artifactId>ci-friendly-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>1.1.0.0</version>
+	<version>1.1.0.1-SNAPSHOT</version>
 	<description>This module is a parent for multi-module ci friendly release management with maven. 
 	It can be used without flattening plugin if it's modules are not used in other project dependencies.
 	Usage: mvn clean deploy scm:tag -Drevision=$BUILD_NUMBER
@@ -34,7 +34,7 @@
 		<!-- <connection>scm:git:https://github.com/yilativs/maven-ci-friendly-multimodule-sample-project.git</connection> -->
 		<developerConnection>scm:git:https://github.com/kumar0326/maven-ci-friendly-multimodule-sample-project.git</developerConnection>
 		<connection>scm:git:https://github.com/kumar0326/maven-ci-friendly-multimodule-sample-project.git</connection>
-          <tag>release-1.1.0.0-SNAPSHOT</tag>
+          <tag>HEAD</tag>
   </scm>
 
 	<distributionManagement>
