--- a/ci-friendly-module1/pom.xml
+++ b/ci-friendly-module1/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>foo.sample.maven.ci.friendly</groupId>
 		<artifactId>ci-friendly-parent</artifactId>
-		<version>1.1.0.1</version>
+		<version>1.1.0.1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<description>This module will be used as dependency in module2.
